Fixed tooltip positioning so that it's not covered inside modal dialog (#1554)

--- a/src/main/resources/assets/admin/common/styles/api/ui/toolbar.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/toolbar.less
@@ -4,7 +4,7 @@
   display: inline-block;
   vertical-align: top;
   height: 100%;
-  line-height: @toolbar-height;
+  line-height: @toolbar-height - 1;
   padding: 0 14px;
 
   &.pull-right {
